--- a/package.json
+++ b/package.json
@@ -49,6 +49,11 @@
     ]
   },
   "devDependencies": {
-    "@types/styled-components": "^5.1.20"
+    "@types/styled-components": "^5.1.20",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.1.7",
+    "prettier": "^2.5.1"
   }
 }
