--- a/.eslintrc
+++ b/.eslintrc
@@ -1,12 +1,26 @@
 {
   "extends": [
     "react-app",
-    "prettier"
+    "prettier",
+    "plugin:import/errors",
+    "plugin:import/warnings",
+    "plugin:import/typescript"
   ],
   "rules": {
     "jsx-quotes": [
       1,
       "prefer-double"
+    ],
+    "import/prefer-default-export": "off",
+    "import/extensions": [
+      "error",
+      "ignorePackages",
+      {
+        "js": "never",
+        "jsx": "never",
+        "ts": "never",
+        "tsx": "never"
+      }
     ]
   },
   "plugins": [
