добавлены изменения для gh pages

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "football-stats",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://DmitryReztsov.github.io/football-stats",
+  "homepage": "https://dmitryreztsov.github.io/football-stats",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
